--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,8 +67,13 @@
         </div>
 
       <% }) %>
-    </ul>  
-
+    </ul>]
+    
+    <% if (user) { %>
+      <a href="/users/logout">Logout</a>
+    <% } else { %>
+      <a href="/users/login">Login</a>
+    <% } %>
     
   </body>
 </html>
