--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -45,6 +45,7 @@
     </ul>
 
     <a href="/">Home</a>
+    <a href="/users/purchases">Relatorio Gerencial</a>
     <a href="/product/create">Criar produto</a>
     <a href="/category/create">Criar categoria</a>
     <a href="/users/update-profile">Editar perfil</a>
@@ -52,6 +53,6 @@
     <form action="/users/deleteAccount" method="POST">
       <input type="submit" value="Deletar conta" />
     </form>
-    <h1>test</h1>
+
   </body>
 </html>
